[gd_scene load_steps=20 format=3 uid="uid://1gjpide404st"]

[ext_resource type="Script" path="res://scripts/characters/player/player.gd" id="1_s6p58"]
[ext_resource type="Texture2D" uid="uid://duqwrn34s4ra8" path="res://assets/player/Frog.png" id="2_5hdts"]
[ext_resource type="PackedScene" uid="uid://dng1silf8yq6j" path="res://scenes/camera/camera_2d.tscn" id="3_jyscn"]
[ext_resource type="PackedScene" uid="uid://c1mu6i78ywnov" path="res://scenes/UI/charge_bar.tscn" id="4_gjj7p"]
[ext_resource type="PackedScene" uid="uid://c2f8blr0p117f" path="res://scenes/state_machine/state_machine.tscn" id="5_hh3lk"]
[ext_resource type="Script" path="res://scripts/characters/player/states/idle.gd" id="6_bdetk"]
[ext_resource type="Script" path="res://scripts/characters/player/states/charging_jump.gd" id="7_6ayiq"]
[ext_resource type="Script" path="res://scripts/characters/player/states/jump.gd" id="8_oxktk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mr1oj"]
size = Vector2(34, 26)

[sub_resource type="Animation" id="Animation_c3t1c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7u8jb"]
resource_name = "charge_front"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}

[sub_resource type="Animation" id="Animation_ax68k"]
resource_name = "charge_side"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [31]
}

[sub_resource type="Animation" id="Animation_os1oi"]
resource_name = "fall"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}

[sub_resource type="Animation" id="Animation_r755s"]
resource_name = "fell"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}

[sub_resource type="Animation" id="Animation_4ekyf"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_ugdou"]
resource_name = "idle_side"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_8lted"]
resource_name = "jump_side"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [29]
}

[sub_resource type="Animation" id="Animation_jxb52"]
resource_name = "jump_start_front"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [21]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6fkt2"]
_data = {
"RESET": SubResource("Animation_c3t1c"),
"charge_front": SubResource("Animation_7u8jb"),
"charge_side": SubResource("Animation_ax68k"),
"fall": SubResource("Animation_os1oi"),
"fell": SubResource("Animation_r755s"),
"idle": SubResource("Animation_4ekyf"),
"idle_side": SubResource("Animation_ugdou"),
"jump_side": SubResource("Animation_8lted"),
"jump_start_front": SubResource("Animation_jxb52")
}

[node name="Player" type="CharacterBody2D"]
z_index = 3
script = ExtResource("1_s6p58")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_5hdts")
hframes = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_mr1oj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6fkt2")
}
autoplay = "idle"

[node name="Camera2D" parent="." instance=ExtResource("3_jyscn")]

[node name="timers" type="Node" parent="."]

[node name="fell_animation_timer" type="Timer" parent="timers"]

[node name="charge_bar" parent="." instance=ExtResource("4_gjj7p")]
position = Vector2(24, 0)

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
bus = &"sfx"

[node name="StateMachine" parent="." node_paths=PackedStringArray("default_state") instance=ExtResource("5_hh3lk")]
default_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("6_bdetk")

[node name="ChargingJump" type="Node" parent="StateMachine"]
script = ExtResource("7_6ayiq")

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource("8_oxktk")

[connection signal="timeout" from="timers/fell_animation_timer" to="." method="_on_fell_animation_timer_timeout"]
